# wtcGadgetron

./: .gitignore
AFIlib/: AFI.xml  AFIGadget.cpp  AFIGadget.h  AFIlib_export.h  CMakeLists.txt  SOSCombine.cpp  SOSCombine.h  twoSetFFTGadget.cpp  twoSetFFTGadget.h
DREAMlib/: CMakeLists.txt  DREAMlib_export.h  asymSINCPulse.h  faToB1Gadget.cpp  faToB1Gadget.h  phasePreserveRxGadget.cpp  phasePreserveRxGadget.h  ptxDREAM.xml  stxDREAM.xml  wtcDREAMGadget.cpp  wtcDREAMGadget.h  wtcExtractGadget.cpp  wtcExtractGadget.h  wtcFFTGadget.cpp  wtcFFTGadget.h  wtcPTxDREAMGadget.cpp  wtcPTxDREAMGadget.h  wtcSplitGadget.cpp  wtcSplitGadget.h
b0Lib/: B0ScalingGadget.cpp  B0ScalingGadget.h  CMakeLists.txt  PhaseDiffCombineGadget.cpp  PhaseDiffCombineGadget.h  b0lib_export.h  ptxB0.xml  robustunwrap.cpp  robustunwrap.h  twoEchoFFTGadget.cpp  twoEchoFFTGadget.h
examplelib/: CMakeLists.txt  ThresholdGadget.cpp  ThresholdGadget.h  threshold.xml
